tests/grammar/variable/export/immutable_2/stderr.golden
error[E1001]: ImmutableError
 --> ${CWD}/main.k:2:5
  |
2 | b = a = 2
  |     ^ Can not change the value of 'a', because it was declared immutable
  |
 --> ${CWD}/main.k:1:1
  |
1 | a = 1
  | ^ The variable 'a' is declared here
  |
note: change the variable name to '_a' to make it mutable